--- a/index.html
+++ b/index.html
@@ -583,6 +583,8 @@
         </div>
     </section>
 
+
+    
     <!-- Projects -->
     <section id="projects" class="py-5">
         <div class="container py-5">
@@ -937,5 +939,14 @@
             this.innerHTML = newTheme === 'dark' ? '<i class="bi bi-moon-stars"></i>' : '<i class="bi bi-sun"></i>';
         });
     </script>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-146PP5Y51M"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-146PP5Y51M');
+</script>
 </body>
 </html>
