--- a/index.html
+++ b/index.html
@@ -20,6 +20,25 @@
     <meta property="og:image" content="https://iure.com.br/assets/og-image.jpg">
     <meta property="og:url" content="https://iure.com.br">
     <meta property="og:type" content="website">
+
+    <meta property="og:type" content="profile">
+    <meta property="profile:first_name" content="Iure">
+    <meta property="profile:last_name" content="Castro">
+    <meta property="profile:username" content="iurecastro">
+    <meta property="profile:gender" content="male">
+
+    <!-- LINK DIRETO PARA SEU LINKEDIN -->
+    <meta property="og:see_also" content="https://www.linkedin.com/in/iurecastro/">
+    <meta property="og:see_also" content="https://linkedin.com/in/iurecastro">
+
+    <!-- AUTORIDADE E CONEXÃO -->
+    <meta property="article:author" content="https://www.linkedin.com/in/iurecastro/">
+    <meta property="article:publisher" content="https://www.linkedin.com/in/iurecastro/">
+
+    <!-- PARA ARTIGOS/BLOG -->
+    <meta property="article:tag" content="Iure Castro">
+    <meta property="article:tag" content="Full Stack Developer">
+    <meta property="article:tag" content="LinkedIn Profile">
     
 
     <!-- Bootstrap 5 CSS -->
