--- a/index.html
+++ b/index.html
@@ -27,6 +27,16 @@
     <meta property="profile:username" content="iurecastro">
     <meta property="profile:gender" content="male">
 
+    <!-- 🐙 GITHUB META TAGS - ESSENCIAIS -->
+    <meta name="github:username" content="iurecastro">
+    <meta name="github:profile" content="https://github.com/iurecastro">
+    <meta name="github:owner" content="Iure Castro">
+    
+    <!-- 🏆 OPEN GRAPH FOR GITHUB -->
+    <meta property="github:user" content="iurecastro">
+    <meta property="github:profile" content="https://github.com/iurecastro">
+    <meta property="github:repositories" content="https://github.com/iurecastro?tab=repositories">
+
     <!-- LINK DIRETO PARA SEU LINKEDIN -->
     <meta property="og:see_also" content="https://www.linkedin.com/in/iurecastro/">
     <meta property="og:see_also" content="https://linkedin.com/in/iurecastro">
