--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     
     <!-- Título otimizado internacional -->
     <title>iure.com.br | Iure Castro - Senior Full Stack Developer & Tech Consultant</title>
-    
+    <link rel="canonical" href="https://iure.com.br" />
     <!-- Meta tags otimizadas -->
     <meta name="description" content="Site principal de Iure Castro - iure.com.br. Senior Full Stack Developer com 10+ anos atuando entre UK e Brasil. ">
     <meta name="keywords" content="iure, iure castro, iure.com.br, iure castro desenvolvedor, iure full stack, iure Frontend, iure web developer, iure london, iure uk, iure brasil, iure developer">
