--- a/index.html
+++ b/index.html
@@ -27,16 +27,6 @@
     <meta property="profile:username" content="iurecastro">
     <meta property="profile:gender" content="male">
 
-    <!-- 🐙 GITHUB META TAGS - ESSENCIAIS -->
-    <meta name="github:username" content="iurecastro">
-    <meta name="github:profile" content="https://github.com/iurecastro">
-    <meta name="github:owner" content="Iure Castro">
-    
-    <!-- 🏆 OPEN GRAPH FOR GITHUB -->
-    <meta property="github:user" content="iurecastro">
-    <meta property="github:profile" content="https://github.com/iurecastro">
-    <meta property="github:repositories" content="https://github.com/iurecastro?tab=repositories">
-
     <!-- LINK DIRETO PARA SEU LINKEDIN -->
     <meta property="og:see_also" content="https://www.linkedin.com/in/iurecastro/">
     <meta property="og:see_also" content="https://linkedin.com/in/iurecastro">
@@ -44,6 +34,15 @@
     <!-- AUTORIDADE E CONEXÃO -->
     <meta property="article:author" content="https://www.linkedin.com/in/iurecastro/">
     <meta property="article:publisher" content="https://www.linkedin.com/in/iurecastro/">
+    <!-- 🐙 GITHUB META TAGS - ESSENCIAIS -->
+    <meta name="github:username" content="iurecastro">
+    <meta name="github:profile" content="https://github.com/iurecastro">
+    <meta name="github:owner" content="Iure Castro">
+
+    <!-- 🏆 OPEN GRAPH FOR GITHUB -->
+    <meta property="github:user" content="iurecastro">
+    <meta property="github:profile" content="https://github.com/iurecastro">
+    <meta property="github:repositories" content="https://github.com/iurecastro?tab=repositories">
 
     <!-- PARA ARTIGOS/BLOG -->
     <meta property="article:tag" content="Iure Castro">
@@ -61,6 +60,42 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@300;400&display=swap" rel="stylesheet">
+
+    <script type="application/ld+json">
+        {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Iure Castro",
+        "alternateName": "Iure",
+        "url": "https://iure.com.br",
+        "image": "https://iure.com.br",
+        "jobTitle": "Senior Full Stack Developer",
+        "description": "Senior Full Stack Developer com 10+ anos de experiência, atuando entre Londres e Brasil. Especialista em soluções escaláveis e arquitetura web.",
+        "address": {
+            "@type": "PostalAddress",
+            "addressLocality": "London",
+            "addressCountry": "UK"
+        },
+        "hasCredential": [
+            {
+            "@type": "EducationalOccupationalCredential",
+            "name": "MBA em Gestão de Projetos"
+            },
+            {
+            "@type": "EducationalOccupationalCredential",
+            "name": "CAPM (PMI)"
+            }
+        ],
+        "knowsAbout": ["Full Stack Development", "React.js", "HTML", "CSS", "JavaScript", Joomla, Wordpress, "PHP", "Cloud Computing", "Technical SEO"],
+        "sameAs": [
+            "https://iure.com.br",
+            "https://iure.uk",
+            "https://iurecastro.com.br",
+            "https://www.linkedin.com/in/iurecastro/",
+            "https://github.com/iurecastro"
+        ]
+        }
+        </script>
     
     <!-- Custom CSS -->
     <style>
