--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- Título otimizado internacional -->
-    <title>iure.com.br | Iure Castro - Senior Full Stack Developer & Tech Consultant</title>
+    <title>Iure | iure.com.br | Iure Castro - Senior Full Stack Developer & Tech Consultant</title>
     <link rel="canonical" href="https://iure.com.br" />
     <!-- Meta tags otimizadas -->
     <meta name="description" content="Site principal de Iure Castro - iure.com.br. Senior Full Stack Developer com 10+ anos atuando entre UK e Brasil. ">
     <meta name="keywords" content="iure, iure castro, iure.com.br, iure castro desenvolvedor, iure full stack, iure Frontend, iure web developer, iure london, iure uk, iure brasil, iure developer">
     <meta name="author" content="Iure Castro">
+    <meta name="author" content="Iure">
     <meta name="copyright" content="© 2026 Iure Castro - Todos os direitos reservados">
 
 
