--- a/index.html
+++ b/index.html
@@ -66,11 +66,14 @@
         {
         "@context": "https://schema.org",
         "@type": "Person",
-        "name": "Iure Castro",
-        "alternateName": "Iure",
+        "name": "Iure",
+        "givenName": "Iure",
+        "familyName": "Castro",
+        "additionalName": "Iure Castro",
         "url": "https://iure.com.br",
         "image": "https://iure.com.br",
         "jobTitle": "Senior Full Stack Developer",
+         "alternateName": ["iurecastro", "Iure Castro"],
         "description": "Senior Full Stack Developer com 10+ anos de experiência, atuando entre Londres e Brasil. Especialista em soluções escaláveis e arquitetura web.",
         "address": {
             "@type": "PostalAddress",
