--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             "name": "CAPM (PMI)"
             }
         ],
-        "knowsAbout": ["Full Stack Development", "React.js", "HTML", "CSS", "JavaScript", Joomla, Wordpress, "PHP", "Cloud Computing", "Technical SEO"],
+        "knowsAbout": ["Full Stack Development", "React.js", "HTML", "CSS", "JavaScript", "Joomla", "Wordpress", "PHP", "Cloud Computing", "Technical SEO"],
         "sameAs": [
             "https://iure.com.br",
             "https://iure.uk",
