--- a/index.html
+++ b/index.html
@@ -5,18 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- Título otimizado internacional -->
-    <title>Iure | iure.com.br | Iure Castro - Senior Full Stack Developer & Tech Consultant</title>
+    <title>Iure | iure.com.br | Iure Castro | Senior Full Stack Web Developer | Site Oficial iure.com.br</title>
     <link rel="canonical" href="https://iure.com.br" />
     <!-- Meta tags otimizadas -->
     <meta name="description" content="Site principal de Iure Castro - iure.com.br. Senior Full Stack Developer com 10+ anos atuando entre UK e Brasil. ">
-    <meta name="keywords" content="iure, iure castro, iure.com.br, iure castro desenvolvedor, iure full stack, iure Frontend, iure web developer, iure london, iure uk, iure brasil, iure developer">
-    <meta name="author" content="Iure Castro">
+    <meta name="keywords" content="iure, iure castro, iure.com.br, iure castro desenvolvedor, iure full stack, iure Frontend, iure web developer, iure london, iure uk, iure brasil, iure developer">    
     <meta name="author" content="Iure">
-    <meta name="copyright" content="© 2026 Iure Castro - Todos os direitos reservados">
+    <meta name="copyright" content="© 2026 Iure - Todos os direitos reservados">
 
 
     <!-- Open Graph -->
-    <meta property="og:title" content="iure.com.br | Iure Castro - Senior Full Stack Developer">
+    <meta property="og:title" content="iure.com.br | Iure Castro - Senior Full Stack Developer | Site Oficial iure.com.br">
     <meta property="og:description" content="Portfolio profissional e hub de projetos de Iure Castro. 10+ anos criando soluções web de alto impacto para mercados internacionais.">
     <meta property="og:image" content="https://iure.com.br/assets/og-image.jpg">
     <meta property="og:url" content="https://iure.com.br">
