--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- Título otimizado internacional -->
-    <title>Iure | iure.com.br | Iure Castro | Senior Full Stack Web Developer | Site Oficial iure.com.br</title>
+    <title>Iure | Senior Full Stack Developer | Site Oficial iure.com.br | Iure Castro</title>
     <link rel="canonical" href="https://iure.com.br" />
     <!-- Meta tags otimizadas -->
     <meta name="description" content="Site principal de Iure Castro - iure.com.br. Senior Full Stack Developer com 10+ anos atuando entre UK e Brasil. ">
