--- a/index.html
+++ b/index.html
@@ -74,11 +74,18 @@
         "jobTitle": "Senior Full Stack Developer",
          "alternateName": ["iurecastro", "Iure Castro"],
         "description": "Senior Full Stack Developer com 10+ anos de experiência, atuando entre Londres e Brasil. Especialista em soluções escaláveis e arquitetura web.",
-        "address": {
-            "@type": "PostalAddress",
-            "addressLocality": "London",
-            "addressCountry": "UK"
-        },
+        "address": [
+            {
+                "@type": "PostalAddress",
+                "addressLocality": "London",
+                "addressCountry": "GB"
+            },
+            {
+                "@type": "PostalAddress",
+                "addressLocality": "Goiânia",
+                "addressCountry": "BR"
+            }
+        ],
         "hasCredential": [
             {
             "@type": "EducationalOccupationalCredential",
@@ -90,6 +97,7 @@
             }
         ],
         "knowsAbout": ["Full Stack Development", "React.js", "HTML", "CSS", "JavaScript", "Joomla", "Wordpress", "PHP", "Cloud Computing", "Technical SEO"],
+        "knowsLanguage": ["Portuguese", "English"],
         "sameAs": [
             "https://iure.com.br",
             "https://iure.uk",
