--- a/index.html
+++ b/index.html
@@ -408,8 +408,8 @@
             <div class="row align-items-center">
                 <div class="col-lg-8">
                     <h1 class="hero-title mb-4">
-                        <span class="gradient-text">Iure Castro</span><br>
-                        Senior Full Stack Developer
+                        <span class="gradient-text">Iure</span><<br>
+                        <span>Senior Full Stack Developer</span>
                     </h1>
                     <p class="hero-subtitle mb-5">
                         Com mais de 10 anos de experiência construindo aplicações web de alto desempenho. 
