--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Iure | Senior Full Stack Developer | Iure Castro | Site Oficial iure.com.br</title>
     <link rel="canonical" href="https://iure.com.br" />
     <!-- Meta tags otimizadas -->
-    <meta name="description" content="Site principal de Iure Castro - iure.com.br. Senior Full Stack Developer com 10+ anos atuando entre UK e Brasil. ">
+    <meta name="description" content="Bem-vindo ao site oficial de Iure Castro (iure.com.br). Senior Full Stack Developer com 10+ anos de experiência internacional entre Londres e Brasil.">
     <meta name="keywords" content="iure, iure castro, iure.com.br, iure castro desenvolvedor, iure full stack, iure Frontend, iure web developer, iure london, iure uk, iure brasil, iure developer">    
     <meta name="author" content="Iure">
     <meta name="copyright" content="© 2026 Iure - Todos os direitos reservados">
@@ -74,7 +74,7 @@
         "jobTitle": "Senior Full Stack Developer",
          "alternateName": ["iurecastro", "Iure Castro"],
         "description": "Senior Full Stack Developer com 10+ anos de experiência, atuando entre Londres e Brasil. Especialista em soluções escaláveis e arquitetura web.",
-        "address": [
+       "address": [
             {
                 "@type": "PostalAddress",
                 "addressLocality": "London",
@@ -408,7 +408,7 @@
             <div class="row align-items-center">
                 <div class="col-lg-8">
                     <h1 class="hero-title mb-4">
-                        <span class="gradient-text">Iure</span><<br>
+                        <span class="gradient-text">Iure</span><br>
                         <span>Senior Full Stack Developer</span>
                     </h1>
                     <p class="hero-subtitle mb-5">
