--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Open Graph -->
     <meta property="og:title" content="iure.com.br | Iure Castro - Senior Full Stack Developer | Site Oficial iure.com.br">
     <meta property="og:description" content="Portfolio profissional e hub de projetos de Iure Castro. 10+ anos criando soluções web de alto impacto para mercados internacionais.">
-    <meta property="og:image" content="https://iure.com.br/assets/og-image.jpg">
+    <meta property="og:image" content="https://iure.com.br/foto.jpg">
     <meta property="og:url" content="https://iure.com.br">
     <meta property="og:type" content="website">
 
@@ -70,7 +70,7 @@
         "familyName": "Castro",
         "additionalName": "Iure Castro",
         "url": "https://iure.com.br",
-        "image": "https://iure.com.br",
+        "image": "https://iure.com.br/foto.jpg",
         "jobTitle": "Senior Full Stack Developer",
          "alternateName": ["iurecastro", "Iure Castro"],
         "description": "Senior Full Stack Developer com 10+ anos de experiência, atuando entre Londres e Brasil. Especialista em soluções escaláveis e arquitetura web.",
