--- a/index.html
+++ b/index.html
@@ -464,9 +464,20 @@
                                     <div class="rounded-circle overflow-hidden" style="width: 150px; height: 150px; background: var(--primary-gradient); padding: 4px;">
                                         <div class="rounded-circle overflow-hidden w-100 h-100 bg-dark">
                                             <!-- Placeholder for profile image -->
+                                                
+                                                <div class="w-100 h-100 d-flex align-items-center justify-content-center" style="
+                                                    font-size: 3.5rem;
+                                                    background-image: url(https://iure.com.br/foto.jpg);
+                                                    background-size: 100%;
+                                                    background-repeat: no-repeat;
+                                                ">
+                                                    
+                                                </div>
+                                            <!--
                                             <div class="w-100 h-100 d-flex align-items-center justify-content-center">
                                                 <i class="bi bi-person display-4"></i>
                                             </div>
+                                            -->
                                         </div>
                                     </div>
                                 </div>
