--- a/index.html
+++ b/index.html
@@ -402,6 +402,7 @@
         </div>
     </nav>
 
+    <main role="main">
     <!-- Hero Section -->
     <section class="hero-section d-flex align-items-center">
         <div class="container">
@@ -950,7 +951,7 @@
             </div>
         </div>
     </section>
-
+</main>
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
