--- a/index.html
+++ b/index.html
@@ -1022,6 +1022,7 @@
         themeToggle.className = 'btn btn-dark position-fixed bottom-3 end-3 rounded-circle z-3';
         themeToggle.style.width = '50px';
         themeToggle.style.height = '50px';
+        themeToggle.setAttribute('aria-label', 'Alternar para tema claro');
         document.body.appendChild(themeToggle);
 
         themeToggle.addEventListener('click', function() {
