--- a/index.html
+++ b/index.html
@@ -164,7 +164,8 @@
             background: linear-gradient(135deg, 
                 rgba(10, 10, 15, 0.95) 0%, 
                 rgba(30, 30, 60, 0.9) 100%),
-                url('https://images.unsplash.com/photo-1555066931-4365d14bab8c?ixlib=rb-4.0.3&auto=format&fit=crop&w=2070&q=80');
+                url('/bg.jpg');
+                /*  url('https://images.unsplash.com/photo-1555066931-4365d14bab8c?ixlib=rb-4.0.3&auto=format&fit=crop&w=2070&q=80'); */
             background-size: cover;
             background-position: center;
             position: relative;
