--- a/index.html
+++ b/index.html
@@ -170,6 +170,7 @@
             background-position: center;
             position: relative;
             overflow: hidden;
+            margin-top: 33px;
         }
         
         .hero-section::before {
